--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   riverpod_generator: ^2.3.5
   json_annotation: ^4.8.1
   path_provider: ^2.1.1
+  image: ^4.1.3
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
